[Nuclio] Versions columns display incorrect on Projects screen for small browser resolution

--- a/src/nuclio/common/screens/create-function/function-import/function-import.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-import/function-import.tpl.html
@@ -31,7 +31,7 @@
                     data-ng-click="$ctrl.createFunction()"
                     data-ng-disabled="!$ctrl.isCreateFunctionAllowed()"
                     data-ng-class="{'disabled': !$ctrl.isCreateFunctionAllowed()}">
-                {{ 'functions:CREATE_FUNCTION' | i18next }}
+                {{ 'functions:NEW_FUNCTION' | i18next }}
             </button>
         </div>
     </form>
