--- a/src/nuclio/projects/projects-welcome-page/projects-welcome-page.tpl.html
+++ b/src/nuclio/projects/projects-welcome-page/projects-welcome-page.tpl.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="ncl-new-entity-button" data-ng-click="$ctrl.openNewProjectDialog()">
-            {{ 'functions:CREATE_PROJECT' | i18next }}
+            {{ 'functions:NEW_PROJECT' | i18next }}
         </div>
         <div class="ncl-new-entity-button"
              ngf-select="$ctrl.importProject($file)"
