[Nuclio] Projects: no initial sort defined

--- a/src/nuclio/projects/projects-functions-view/projects-functions-view.tpl.html
+++ b/src/nuclio/projects/projects-functions-view/projects-functions-view.tpl.html
@@ -88,7 +88,7 @@
                 <igz-default-dropdown data-select-property-only="id"
                                       data-selected-item="$ctrl.projectsService.viewMode"
                                       data-values-array="$ctrl.viewByOptions"
-                                      data-item-select-callback="$ctrl.changeView(item)">
+                                      data-item-select-callback="$ctrl.changeView(item.id)">
                 </igz-default-dropdown>
             </div>
             <div class="igz-action-panel">
