--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
@@ -12,10 +12,8 @@
                                      data-item-index="$index"
                                      data-use-type="true"
                                      data-use-labels="true"
-                                     data-key-tooltip="{{$ctrl.keyTooltip}}"
-                                     data-key-validation-pattern="$ctrl.keyValidationPattern"
-                                     data-config-map-key-tooltip="{{$ctrl.configMapKeyTooltip}}"
-                                     data-config-map-key-validation-pattern="$ctrl.configMapKeyValidationPattern"
+                                     data-key-validation-rules="$ctrl.keyValidationRules"
+                                     data-config-map-key-validation-rules="$ctrl.configMapKeyValidationRules"
                                      data-all-value-types="$ctrl.isOnlyValueTypeInputs"
                                      data-action-handler-callback="$ctrl.handleAction(actionType, index)"
                                      data-change-data-callback="$ctrl.onChangeData(newData, index)"
