--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
@@ -40,7 +40,7 @@
                             <ncl-edit-item class="common-table-cells-container edit-volume-row"
                                            data-item="volume"
                                            data-type="volume"
-                                           data-on-input-value-callback="$ctrl.onInputValueCallback(newItem)"
+                                           data-validation-rules="$ctrl.validationRules"
                                            data-on-submit-callback="$ctrl.editVolumeCallback(item)">
                             </ncl-edit-item>
                         </ncl-collapsing-row>
