--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-annotations/version-configuration-annotations.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-annotations/version-configuration-annotations.tpl.html
@@ -10,12 +10,12 @@
     <form name="$ctrl.annotationsForm" class="annotations-wrapper" novalidate>
         <div data-ng-if="$ctrl.annotations.length > 0" class="table-headers">
             <div class="key-header">
-                <span data-uib-tooltip-html="$ctrl.keyTooltip"
-                      data-tooltip-placement="right"
-                      data-tooltip-popup-delay="300"
-                      data-tooltip-append-to-body="true">
-                    {{ 'common:KEY' | i18next }}
-                </span>
+                {{ 'common:KEY' | i18next }}
+                <igz-more-info
+                        data-description="{{$ctrl.keyTooltip}}"
+                        data-trigger="click"
+                        data-is-html-enabled="true">
+                </igz-more-info>
             </div>
             <div class="value-header">
                 {{ 'common:VALUE' | i18next }}
@@ -31,7 +31,7 @@
                                      data-row-data="annotation"
                                      data-use-type="false"
                                      data-item-index="$index"
-                                     data-key-validation-pattern="$ctrl.keyValidationPattern"
+                                     data-validation-rules="$ctrl.validationRules"
                                      data-action-handler-callback="$ctrl.handleAction(actionType, index)"
                                      data-change-data-callback="$ctrl.onChangeData(newData, index)"
                                      data-submit-on-fly="true">
