--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
@@ -12,8 +12,7 @@
                                      data-item-index="$index"
                                      data-use-type="true"
                                      data-use-labels="true"
-                                     data-key-validation-rules="$ctrl.keyValidationRules"
-                                     data-config-map-key-validation-rules="$ctrl.configMapKeyValidationRules"
+                                     data-validation-rules="$ctrl.validationRules"
                                      data-all-value-types="$ctrl.isOnlyValueTypeInputs"
                                      data-action-handler-callback="$ctrl.handleAction(actionType, index)"
                                      data-change-data-callback="$ctrl.onChangeData(newData, index)"
