Use binding instead of broadcast

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
@@ -16,6 +16,7 @@
                                      data-all-value-types="$ctrl.isOnlyValueTypeInputs"
                                      data-action-handler-callback="$ctrl.handleAction(actionType, index)"
                                      data-change-data-callback="$ctrl.onChangeData(newData, index)"
+                                     data-change-type-callback="$ctrl.onChangeType(newType, index)"
                                      data-dropdown-overlap="true"
                                      data-submit-on-fly="true">
                 </ncl-key-value-input>
