[Nuclio] Build: display error instead of log entries

--- a/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
@@ -50,7 +50,7 @@
                     </span>
                     <div class="ncl-monitoring-build-logs collapsed-block-content-wrapper"
                          data-uib-collapse="$ctrl.rowIsCollapsed.buildLog">
-                        <ncl-deploy-log data-log-entires="$ctrl.versionStatus.logs"></ncl-deploy-log>
+                        <ncl-deploy-log data-log-entries="$ctrl.versionStatus.logs"></ncl-deploy-log>
                     </div>
                 </div>
             </div>
