--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
@@ -9,8 +9,17 @@
     </div>
     <form name="$ctrl.labelsForm" class="labels-wrapper" novalidate>
         <div data-ng-if="$ctrl.labels.length > 0" class="table-headers">
-            <div class="key-header">{{ 'common:KEY' | i18next }}</div>
-            <div class="value-header">{{ 'common:VALUE' | i18next }}</div>
+            <div class="key-header">
+                {{ 'common:KEY' | i18next }}
+                <igz-more-info
+                        data-description="{{$ctrl.keyTooltip}}"
+                        data-trigger="click"
+                        data-is-html-enabled="true">
+                </igz-more-info>
+            </div>
+            <div class="value-header">
+                {{ 'common:VALUE' | i18next }}
+            </div>
         </div>
         <div class="igz-scrollable-container scrollable-labels"
              data-ng-scrollbars
@@ -22,6 +31,7 @@
                                      data-row-data="label"
                                      data-item-index="$index"
                                      data-use-type="false"
+                                     data-validation-rules="$ctrl.validationRules"
                                      data-is-disabled="$ctrl.isVersionDeployed($ctrl.version)"
                                      data-action-handler-callback="$ctrl.handleAction(actionType, index)"
                                      data-change-data-callback="$ctrl.onChangeData(newData, index)"
