--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -81,7 +81,7 @@
                                 data-tooltip-popup-delay="300"
                                 data-tooltip-placement="top"
                                 data-tooltip-append-to-body="true">
-                            {{ 'functions:TEST' | i18next }}
+                            {{ 'common:TEST' | i18next }}
                         </button>
                         <button class="ncl-secondary-button"
                                 data-ng-class="{'disabled': $ctrl.uploadingData.name !== ''}"
