--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -1,17 +1,16 @@
-<div class="ncl-function-collapsing-row items-wrapper" data-ng-class="{'in-projects-view': $ctrl.isProjectsView}">
+<div class="ncl-function-collapsing-row items-wrapper">
     <div class="scrolling-row"></div>
     <div class="function-title-block common-table-row">
-        <div class="common-table-cell igz-col-3" data-ng-if="$ctrl.isProjectsView">
+        <div class="common-table-cell igz-col-3">
             <igz-action-checkbox
-                    data-ng-class="{'visible': $ctrl.projectsService.checkedItem === 'functions',
-                                    'invisible': $ctrl.projectsService.checkedItem !== 'functions' &&
-                                                 $ctrl.projectsService.checkedItem !== ''}"
+                    data-ng-class="{'visible': $ctrl.functionsService.checkedItem === 'functions',
+                                    'invisible': $ctrl.functionsService.checkedItem !== 'functions' &&
+                                                 $ctrl.functionsService.checkedItem !== ''}"
                     data-item="$ctrl.function"
                     data-item-type="functions">
             </igz-action-checkbox>
         </div>
-        <div class="common-table-cell igz-col-3" data-ng-if="$ctrl.isProjectsView"></div>
-        <div class="common-table-cell igz-col-3 function-row-collapse" data-ng-if="!$ctrl.isProjectsView">
+        <div class="common-table-cell igz-col-3 function-row-collapse">
             <span data-ng-if="$ctrl.function.spec.version > -1"
                   class="collapse-icon"
                   data-ng-click="$ctrl.isFunctionCollapsed = !$ctrl.isFunctionCollapsed"
@@ -21,32 +20,18 @@
 
         <div class="igz-row common-table-cells-container"
              data-ng-click="$ctrl.onSelectRow($event)">
-            <div class="common-table-cell igz-col-2-5 function-row-collapse"
-                 data-test-id="functions.item-collapse"
-                 data-ng-if="$ctrl.isProjectsView"
-                 data-ng-click="$ctrl.toggleFunctionRow($event)">
-                <span data-ng-if="$ctrl.function.spec.version > -1"
-                      class="collapse-icon"
-                      data-ng-class="{'collapsed igz-icon-right': $ctrl.isFunctionCollapsed, 'igz-icon-down': !$ctrl.isFunctionCollapsed}">
-                </span>
-            </div>
             <div class="common-table-cell function-name"
                  data-test-id="functions.item-name"
-                 data-ng-class="[$ctrl.getFunctionsTableColSize('rowName', $ctrl.projectsService.viewMode)]"
+                 data-ng-class="[$ctrl.getFunctionsTableColSize('rowName')]"
                  data-uib-tooltip-html="$ctrl.functionNameTooltip"
                  data-tooltip-append-to-body="true"
                  data-tooltip-placement="top"
                  data-tooltip-popup-delay="200">
                 {{$ctrl.function.metadata.name}} {{$ctrl.isFunctionCollapsed ? '($LATEST)' : ''}}
             </div>
-            <div class="igz-col-10 common-table-cell"
-                 data-test-id="functions.item-project"
-                 data-ng-if="!$ctrl.isProjectsView">
-                {{$ctrl.function.ui.project.spec.displayName || $ctrl.function.ui.project.metadata.name}}
-            </div>
             <div class="common-table-cell function-status"
                  data-test-id="functions.item-status"
-                 data-ng-class="[$ctrl.getFunctionsTableColSize('status', $ctrl.projectsService.viewMode)]"
+                 data-ng-class="[$ctrl.getFunctionsTableColSize('status')]"
                  data-ng-show="$ctrl.isFunctionCollapsed">
                 {{$ctrl.convertedStatusState}}
                 <div class="status-icon"
@@ -60,7 +45,7 @@
             <div data-ng-if="$ctrl.isDemoMode()"
                  data-ng-show="$ctrl.isFunctionCollapsed"
                  class="common-table-cell"
-                 data-ng-class="[$ctrl.getFunctionsTableColSize('replicas', $ctrl.projectsService.viewMode)]">
+                 data-ng-class="[$ctrl.getFunctionsTableColSize('replicas')]">
                 {{$ctrl.function.spec.replicas}}
             </div>
             <div class="igz-col-7-5 common-table-cell"
@@ -68,7 +53,7 @@
                  data-ng-show="$ctrl.isFunctionCollapsed">
                 {{$ctrl.runtimes[$ctrl.function.spec.runtime]}}
             </div>
-            <div class="igz-col-10 common-table-cell"
+            <div class="igz-col-12-5 common-table-cell"
                  data-test-id="functions.item-invocation-url"
                  data-ng-show="$ctrl.isFunctionCollapsed"
                  data-uib-tooltip="{{$ctrl.invocationUrl}}"
@@ -82,10 +67,10 @@
                 {{$ctrl.function.ui.metrics.invocationPerSec || 0}}
             </div>
 
-            <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-12-5"
+            <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-15"
                                         data-name="nuclio_function_cpu-{{$ctrl.function.metadata.name}}"
                                         data-loading-status-size="small">
-                <igz-size data-ng-if="!$ctrl.function.ui.error.nuclio_function_cpu && $ctrl.isFunctionCollapsed && !$ctrl.isProjectCollapsed"
+                <igz-size data-ng-if="!$ctrl.function.ui.error.nuclio_function_cpu && $ctrl.isFunctionCollapsed"
                           data-type="functions_cpu"
                           data-entity="$ctrl.function"
                           data-test-id="functions.item-cpu">
@@ -95,10 +80,10 @@
                 </div>
             </igz-element-loading-status>
 
-            <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-12-5"
+            <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-15"
                                         data-name="nuclio_function_mem-{{$ctrl.function.metadata.name}}"
                                         data-loading-status-size="small">
-                <igz-size data-ng-if="!$ctrl.function.ui.error.nuclio_function_mem && $ctrl.isFunctionCollapsed && !$ctrl.isProjectCollapsed"
+                <igz-size data-ng-if="!$ctrl.function.ui.error.nuclio_function_mem && $ctrl.isFunctionCollapsed"
                           data-type="functions_memory"
                           data-entity="$ctrl.function"
                           data-test-id="functions.item-memory">
@@ -108,10 +93,10 @@
                 </div>
             </igz-element-loading-status>
 
-            <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-12-5"
+            <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-15"
                                         data-name="nuclio_processor_handled_events_total-{{$ctrl.function.metadata.name}}"
                                         data-loading-status-size="small">
-                <igz-size data-ng-if="!$ctrl.function.ui.error.nuclio_processor_handled_events_total && $ctrl.isFunctionCollapsed && !$ctrl.isProjectCollapsed"
+                <igz-size data-ng-if="!$ctrl.function.ui.error.nuclio_processor_handled_events_total && $ctrl.isFunctionCollapsed"
                           data-type="functions_events"
                           data-entity="$ctrl.function"
                           data-test-id="functions.item-invocations">
@@ -137,7 +122,6 @@
                                       data-function="$ctrl.function"
                                       data-invocation-url="$ctrl.invocationURL"
                                       data-is-function-collapsed="$ctrl.isFunctionCollapsed"
-                                      data-is-projects-view="$ctrl.isProjectsView"
                                       data-project="$ctrl.project"
                                       data-status-icon="$ctrl.statusIcon"
                                       data-toggle-function-state="$ctrl.toggleFunctionState(event)"
