--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-version-row/function-version-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-version-row/function-version-row.tpl.html
@@ -1,27 +1,22 @@
 <div class="ncl-function-version-row common-table-row">
     <div class="common-table-cell igz-col-3">
         <igz-action-checkbox
-                data-ng-class="{'visible': $ctrl.projectsService.checkedItem === 'versions',
-                                'invisible': !$ctrl.isDemoMode() || ($ctrl.projectsService.checkedItem !== 'versions' &&
-                                             $ctrl.projectsService.checkedItem !== '')}"
+                data-ng-class="{'visible': $ctrl.functionsService.checkedItem === 'versions',
+                                'invisible': !$ctrl.isDemoMode() || ($ctrl.functionsService.checkedItem !== 'versions' &&
+                                             $ctrl.functionsService.checkedItem !== '')}"
                 data-item="$ctrl.version"
                 data-item-type="versions">
         </igz-action-checkbox>
     </div>
-    <div class="common-table-cell igz-col-3" data-ng-if="$ctrl.isProjectsView"></div>
+    <div class="common-table-cell igz-col-3"></div>
     <div class="igz-row common-table-cells-container"
          data-ng-click="$ctrl.onSelectRow($event)">
-        <div class="common-table-cell igz-col-2-5" data-ng-if="$ctrl.isProjectsView"></div>
         <div class="common-table-cell"
-             data-ng-class="[$ctrl.getFunctionsTableColSize('rowName', $ctrl.projectsService.viewMode)]">
+             data-ng-class="[$ctrl.getFunctionsTableColSize('rowName')]">
             {{$ctrl.version.name}}
         </div>
-        <div class="igz-col-10 common-table-cell"
-             data-ng-if="!$ctrl.isProjectsView">
-            {{$ctrl.function.ui.project.spec.displayName || $ctrl.function.ui.project.metadata.name}}
-        </div>
         <div class="common-table-cell function-status"
-             data-ng-class="[$ctrl.getFunctionsTableColSize('status', $ctrl.projectsService.viewMode)]">
+             data-ng-class="[$ctrl.getFunctionsTableColSize('status')]">
             {{$ctrl.convertedStatusState}}
             <div class="status-icon"
                  data-uib-tooltip="{{$ctrl.getTooltip()}}"
@@ -33,13 +28,13 @@
         </div>
         <div data-ng-if="$ctrl.isDemoMode()"
              class="common-table-cell"
-             data-ng-class="[$ctrl.getFunctionsTableColSize('replicas', $ctrl.projectsService.viewMode)]">
+             data-ng-class="[$ctrl.getFunctionsTableColSize('replicas')]">
             {{$ctrl.function.spec.replicas}}
         </div>
         <div class="igz-col-7-5 common-table-cell">
             {{$ctrl.runtimes[$ctrl.function.spec.runtime]}}
         </div>
-        <div class="igz-col-10 common-table-cell"
+        <div class="igz-col-12-5 common-table-cell"
              data-uib-tooltip="{{$ctrl.invocationUrl}}"
              data-tooltip-append-to-body="true"
              data-tooltip-placement="top">
@@ -49,7 +44,7 @@
             {{$ctrl.function.ui.metrics.invocation || 0}}
         </div>
 
-        <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-12-5"
+        <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-15"
                                     data-name="nuclio_function_cpu-{{$ctrl.function.metadata.name}}"
                                     data-loading-status-size="small">
             <igz-size data-ng-if="!$ctrl.function.ui.error.nuclio_function_cpu && !$ctrl.isFunctionCollapsed"
@@ -61,7 +56,7 @@
             </div>
         </igz-element-loading-status>
 
-        <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-12-5"
+        <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-15"
                                     data-name="nuclio_function_mem-{{$ctrl.function.metadata.name}}"
                                     data-loading-status-size="small">
             <igz-size data-ng-if="!$ctrl.function.ui.error.nuclio_function_mem && !$ctrl.isFunctionCollapsed"
@@ -73,7 +68,7 @@
             </div>
         </igz-element-loading-status>
 
-        <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-12-5"
+        <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-15"
                                     data-name="nuclio_processor_handled_events_total-{{$ctrl.function.metadata.name}}"
                                     data-loading-status-size="small">
             <igz-size data-ng-if="!$ctrl.function.ui.error.nuclio_processor_handled_events_total && !$ctrl.isFunctionCollapsed"
