Fix [Nuclio] Status: No invocation URL when scaled-to-zero

--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -120,7 +120,7 @@
                                       data-action-handler-callback="$ctrl.handleAction(actionType, checkedItems)"
                                       data-converted-status-state="$ctrl.convertedStatusState"
                                       data-function="$ctrl.function"
-                                      data-invocation-url="$ctrl.invocationURL"
+                                      data-invocation-url="$ctrl.invocationUrl"
                                       data-is-function-collapsed="$ctrl.isFunctionCollapsed"
                                       data-project="$ctrl.project"
                                       data-status-icon="$ctrl.statusIcon"
