Impl [Nuclio] Function>Code>Archive>URL: Reword placeholder

--- a/src/nuclio/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/functions/version/version-code/version-code.tpl.html
@@ -130,7 +130,7 @@
                                                     data-is-focused="true"
                                                     data-form-object="$ctrl.versionCodeForm"
                                                     data-validation-is-required="true"
-                                                    data-placeholder-text="{{ 'common:FOR_EXAMPLE' | i18next }}: https://webapi.default-tenant.app.mycluster.iguazio.com/users/myuser/my-functions.zip"
+                                                    data-placeholder-text="{{ 'common:FOR_EXAMPLE' | i18next }}: https://v3io-webapi/users/iguazio/myfunction.zip"
                                                     data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                                     data-update-data-field="spec.build.path"
                                                     class="nuclio-validating-input">
