--- a/src/nuclio/functions/version/version-monitoring/version-monitoring.tpl.html
+++ b/src/nuclio/functions/version/version-monitoring/version-monitoring.tpl.html
@@ -8,11 +8,18 @@
                     <span class="monitoring-block-title">
                         {{ 'functions:INVOCATION_URL' | i18next }}:
                     </span>
-                    <a data-ng-if="($ctrl.version.status.state === 'ready' || $ctrl.version.status.state === 'scaledToZero') && $ctrl.version.ui.invocationUrl !== ''"
-                       class="monitoring-invocation-url"
-                       href="{{$ctrl.version.ui.invocationUrl}}">
-                        {{$ctrl.version.ui.invocationUrl}}
-                    </a>
+                    <div class="monitoring-invocation-url-wrapper"
+                         data-ng-if="($ctrl.version.status.state === 'ready' || $ctrl.version.status.state === 'scaledToZero') && $ctrl.version.ui.invocationUrl !== ''">
+                        <a class="monitoring-invocation-url"
+                           href="{{$ctrl.version.ui.invocationUrl}}">
+                            {{$ctrl.version.ui.invocationUrl}}
+                        </a>
+                        <div class="igz-action-panel">
+                            <div class="actions-list">
+                                <igz-copy-to-clipboard data-value="$ctrl.version.ui.invocationUrl"></igz-copy-to-clipboard>
+                            </div>
+                        </div>
+                    </div>
                     <span data-ng-if="($ctrl.version.status.state === 'ready' || $ctrl.version.status.state === 'scaledToZero') && $ctrl.version.ui.invocationUrl === ''"
                           class="monitoring-invocation-field-invalid">N/A</span>
                     <span data-ng-if="$ctrl.version.status.state !== 'ready' && $ctrl.version.status.state !== 'scaledToZero'"
