--- a/src/nuclio/functions/function-collapsing-row/function-version-row/function-version-row.tpl.html
+++ b/src/nuclio/functions/function-collapsing-row/function-version-row/function-version-row.tpl.html
@@ -39,6 +39,11 @@
              data-tooltip-append-to-body="true"
              data-tooltip-placement="top">
             <span class="common-table-cell-content">{{$ctrl.invocationUrl}}</span>
+            <div class="igz-action-panel">
+                <div class="actions-list">
+                    <igz-copy-to-clipboard data-value="$ctrl.invocationUrl"></igz-copy-to-clipboard>
+                </div>
+            </div>
         </div>
         <div class="igz-col-10 common-table-cell">
             {{$ctrl.function.ui.metrics.invocation || 0}}
