--- a/src/nuclio/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -56,13 +56,13 @@
             <div class="igz-col-12-5 common-table-cell"
                  data-test-id="functions.item-invocation-url"
                  data-ng-show="$ctrl.isFunctionCollapsed"
-                 data-uib-tooltip="{{$ctrl.invocationUrl}}"
+                 data-uib-tooltip="{{$ctrl.invocationUrl.text}}"
                  data-tooltip-append-to-body="true"
                  data-tooltip-placement="top">
-                <span class="common-table-cell-content">{{$ctrl.invocationUrl}}</span>
-                <div class="igz-action-panel">
+                <span class="common-table-cell-content">{{$ctrl.invocationUrl.text}}</span>
+                <div class="igz-action-panel" data-ng-if="$ctrl.invocationUrl.valid">
                     <div class="actions-list">
-                        <igz-copy-to-clipboard data-value="$ctrl.invocationUrl"></igz-copy-to-clipboard>
+                        <igz-copy-to-clipboard data-value="$ctrl.invocationUrl.text"></igz-copy-to-clipboard>
                     </div>
                 </div>
             </div>
