Impl [Nuclio] Invocation URL: add copy to clipboard (#843)

--- a/src/nuclio/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -56,10 +56,15 @@
             <div class="igz-col-12-5 common-table-cell"
                  data-test-id="functions.item-invocation-url"
                  data-ng-show="$ctrl.isFunctionCollapsed"
-                 data-uib-tooltip="{{$ctrl.invocationUrl}}"
+                 data-uib-tooltip="{{$ctrl.invocationUrl.text}}"
                  data-tooltip-append-to-body="true"
                  data-tooltip-placement="top">
-                <span class="common-table-cell-content">{{$ctrl.invocationUrl}}</span>
+                <span class="common-table-cell-content">{{$ctrl.invocationUrl.text}}</span>
+                <div class="igz-action-panel" data-ng-if="$ctrl.invocationUrl.valid">
+                    <div class="actions-list">
+                        <igz-copy-to-clipboard data-value="$ctrl.invocationUrl.text"></igz-copy-to-clipboard>
+                    </div>
+                </div>
             </div>
             <div class="igz-col-10 common-table-cell"
                  data-test-id="functions.item-invocation-per-sec"
